# K8s-Demo

./: .gitignore  README.md  cluster.tf  consumer-service.yaml  global-manifest.yaml  service1.yaml  service2.yaml  service3.yaml  versions.tf
dummy-services/: Cargo.toml  Dockerfile
dummy-services/src/: dummy_service_logic.rs  lib.rs
